# manage-log-group-subscriptions

./: .bandit  .gitignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  index.md  log_handler_subscription.py  main.py  package.sh  pyproject.toml  requirements-tests.txt  setup.cfg  tox.ini
tests/: log_handler_subscription.py
tests/test-data/: log-group-response-no-token.json  log-group-response.json  log_handler.json  subscription-filters-response.json
